Refactored namespaces: Extensions -> Internal.Extensions, Base -> Common

--- a/Alba.CsCss/Style/Original/nsCSSKeywordList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSKeywordList.tt
@@ -46,7 +46,7 @@ namespace Alba.CsCss.Style
 //
 
 using System.Collections.Generic;
-using Alba.CsCss.Extensions;
+using Alba.CsCss.Internal.Extensions;
 
 namespace Alba.CsCss.Style
 {
