--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -35,8 +35,8 @@ using System;
 using System.Collections.Generic;
 using System.Diagnostics;
 using System.Text;
-using Alba.CsCss.Extensions;
 using Alba.CsCss.Gfx;
+using Alba.CsCss.Internal.Extensions;
 
 using int32_t = System.Int32;
 using uint8_t = System.SByte;  // O RLY?
