--- a/Alba.CsCss/Gfx/Original/nsColorNameList.tt
+++ b/Alba.CsCss/Gfx/Original/nsColorNameList.tt
@@ -31,7 +31,7 @@ using System.Linq;
 
 namespace Alba.CsCss.Gfx
 {
-    internal partial struct nscolor
+    public partial struct nscolor
     {
         private static readonly string[] kColorNames = {
 <#+       foreach (GfxColorName color in GetGfxColorNames()) { #>
