--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -100,7 +100,8 @@ namespace Alba.CsCss.Style
             .ReReplace(@"(?n)NS_ConvertASCIItoUTF16 (?<Var>\w+)\((?<Value>"+sArgs+@")\);", "string ${Var} = ${Value};")
             .ReReplace(@"(?n)CopyUTF16toUTF8\((?<Value>"+sArgs+@"), (?<Var>"+sArgs+@")\);", "${Var} = ${Value};")
             .ReReplace(@"nsContentUtils::ASCIIToLower\((.*)\)", "$1 = $1.ToLower()")
-            .ReReplace(@"NSToIntRound\(", "NumberUtil.NSToIntRound(")
+            .ReReplace(@"NSToIntRound\(", "CommonUtil.NSToIntRound(")
+            .ReReplace(@"NS_NewURI\(", "CommonUtil.NS_NewURI(")
             .ReReplace(@"do_GetAtom", "String.Intern") // "atom" in Mozilla's sense is a string value instance used for all equal values (to compare by reference and lower memory usage)
             .ReReplace(@"NS_(RGBA?)", "nscolor.$1") // nscolor.*
             .ReReplace(@"NS_GET_([RGBA])\((\w+)\)", "$2.$1") // nscolor.*
@@ -211,7 +212,7 @@ namespace Alba.CsCss.Style
             .Replace(@"(wasFirstComponentFlexBasis ? flexBasis : flexGrow) = tmpVal;", "if (wasFirstComponentFlexBasis) flexBasis = tmpVal; else flexGrow = tmpVal;")
             .Replace(@"mToken.mIdentStr.Truncate(truncAt);", "mToken.mIdentStr = mToken.mIdentStr.Substring(0, truncAt);")
             .Replace(@"buffer.Append(tk.mIdentStr);", "buffer = tk.mIdentStr;")
-            .Replace(@"aComponent = NumberUtil", "aComponent = (uint8_t)NumberUtil")
+            .Replace(@"aComponent = CommonUtil", "aComponent = (uint8_t)CommonUtil")
             .Replace(@"isPseudoClass + isPseudoElement + isAnonBox", "(isPseudoClass?1:0) + (isPseudoElement?1:0) + (isAnonBox?1:0)")
             .Replace(@"uint16_t numElements = ", "uint16_t numElements = (uint16_t)")
             .ReReplace(@"nsCSSProperty\.\w+\]", "(int)$&")
@@ -242,7 +243,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"(?<Type>nsCSSValue|BackgroundParseState|nsFont) (?<Var>\w+)\((?<Args>"+sArgs+@")\);", "var ${Var} = new ${Type}(${Args});") // Type Var(Args) -> var Var = new Var(Args)
             .ReReplace(@"(?<Type>nsCSSValue|nsCSSValueList|int32_t|bool) +(?<Var>\w+)\[(?<Size>[\w\.]+)?\];", "var ${Var} = new ${Type}[${Size}];") // Type Var[Size] -> var Var = new Type[Size]
             .ReReplace(@"(?<Type>Declaration|string) +(?<Var>\w+)\((?<Args>"+sArgs+@")\);", "${Type} ${Var} = ${Args};") // Type Var(Args) -> Type Var = Args
-            .ReReplace(@"(?<Type>nsCSSValuePair|nsCSSSelectorList|nsAtomList|ExtractFirstFamilyData|ReduceNumberCalcOps|List<(?:float|nsCSSValue|uint32_t)>|nscolor|nsCSSRect) (?<Var>\w+);", "var ${Var} = new ${Type}();") // Type Var -> var Var = new Type()
+            .ReReplace(@"(?<Type>nsCSSValue|nsCSSValuePair|nsCSSSelectorList|nsAtomList|ExtractFirstFamilyData|ReduceNumberCalcOps|List<(?:float|nsCSSValue|uint32_t)>|nscolor|nsCSSRect) +(?<Var>\w+);", "var ${Var} = new ${Type}();") // Type Var -> var Var = new Type()
             .ReReplace(@"(?<Type>nsCSSUnit|u?int\d+_t) (?<Var>\w+);", "${Type} ${Var} = 0;") // int Var -> int Var = 0
             .ReReplace(@"bool (conditionMet|hitStop|rv|haveWS|useCommas|single|is3D|changed);", "bool $1 = false;") // bool Var -> bool Var = false
             .ReReplace(@"string +\b(str|valueStr|prefix|url|urlString|pseudoElement)\b;", "string $1 = \"\";") // string Var -> string Var = ""
@@ -252,6 +253,12 @@ namespace Alba.CsCss.Style
             .Replace(@"int32_t numbers[2] = { 0, 0 };", "int32_t[] numbers = { 0, 0 };")
             .Replace(@"int32_t[]  variantMask;", "var variantMask = new int32_t[0];")
             .Replace(@"nsCSSRect dimenX, dimenY;", "nsCSSRect dimenX = new nsCSSRect(), dimenY = new nsCSSRect();")
+            .Replace(@"nsCSSValue dimenX, dimenY;", "nsCSSValue dimenX = new nsCSSValue(), dimenY = new nsCSSValue();")
+            .Replace(@"nsCSSValue xValue, yValue;", "nsCSSValue xValue = new nsCSSValue(), yValue = new nsCSSValue();")
+            .Replace(@"nsCSSValue width, height;", "nsCSSValue width = new nsCSSValue(), height = new nsCSSValue();")
+            .Replace(@"nsCSSValue x, y;", "nsCSSValue x = new nsCSSValue(), y = new nsCSSValue();")
+            .Replace(@"nsCSSValue blink, line, style, color;", "nsCSSValue blink = new nsCSSValue(), line = new nsCSSValue(), style = new nsCSSValue(), color = new nsCSSValue();")
+            .Replace(@"nsCSSValue image, repeat, attachment, clip, origin, position, size;", "nsCSSValue image = new nsCSSValue(), repeat = new nsCSSValue(), attachment = new nsCSSValue(), clip = new nsCSSValue(), origin = new nsCSSValue(), position = new nsCSSValue(), size = new nsCSSValue();")
             .Replace(@"float x1, x2, y1, y2;", "float x1 = 0, x2 = 0, y1 = 0, y2 = 0;")
             .Replace(@"string stopSymbolChars", "char[] stopSymbolChars")
             .Replace(@"uint16_t minElems, maxElems;", "uint16_t minElems = 0, maxElems = 0;")
